2004-12-08  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/gnu/java/net/protocol/http/HTTPURLConnection.java: 
	Resynced with GNU Classpath.
	
	2004-12-07  Chris Burdess  <dog@gnu.org>

	* gnu/java/net/protocol/http/HTTPURLConnection.java: Added support
	for http.agent, http.keepAlive, and http.maxConnections system
	properties (and LRU connection pool).

2004-12-08  Dalibor Topic  <robilad@kaffe.org>

	* libltdl/install-sh,
	libraries/javalib/Makefile.am,
	libraries/javalib/Makefile.in,
	libraries/javalib/all.files:
	Regenerated.
	
	* libraries/javalib/gnu/java/locale/LocaleInformation_pa.java,
	libraries/javalib/gnu/java/locale/LocaleInformation_pa_IN.java:
	Resynced with GNU Classpath.

	2004-12-07  Michael Koch  <konqueror@gmx.de>

	* gnu/java/locale/LocaleInformation_pa.java,
	gnu/java/locale/LocaleInformation_pa_IN.java:
	New locale files.
	
2004-12-08  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/javax/imageio/stream/FileImageOutputStream.java:
	Resynced with GNU Classpath.
	
	2004-12-07  Michael Koch  <konqueror@gmx.de>

	* javax/imageio/stream/FileImageOutputStream.java:
	Implemented.
	
2004-12-08  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/util/Timer.java:
	Resynced with GNU Classpath.
	
	2004-12-07  Jeroen Frijters  <jeroen@frijters.net>

	* java/util/Timer.java
	(run): Stop the queue if a task throws an exception.
	
2004-12-08  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/beans/PropertyDescriptor.java:
	Resynced with GNU Classpath.
	
	2004-12-07  Jeroen Frijters  <jeroen@frijters.net>

	* java/beans/PropertyDescriptor.java
	(PropertyDescriptor,setReadMethod): Set propertyType.
	
2004-12-08  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/javax/imageio/stream/FileCacheImageInputStream.java,
	libraries/javalib/javax/imageio/stream/FileCacheImageOutputStream.java,
	libraries/javalib/javax/imageio/stream/FileImageInputStream.java,