@@ -1,3 +1,14 @@
+2004-12-08  Guilhem Lavaux  <guilhem@kaffe.org>
+
+	* kaffe/kaffevm/object.c
+	(newMultiArrayChecked): Fixed recursion.
+
+	* test/regression/MultiArray.java: New test by Mark Wielaard <mark@klomp.org>
+
+	* test/regression/Makefile.am: Added MultiArray.
+
+	* test/regression/Makefile.in: Regenerated.
+	
 2004-12-08  Dalibor Topic  <robilad@kaffe.org>
 
 	* libraries/javalib/gnu/java/net/protocol/http/HTTPURLConnection.java: 
